--- a/templates/pages/aboutUsPage.html.twig
+++ b/templates/pages/aboutUsPage.html.twig
@@ -86,64 +86,64 @@
 
     </section>
 
-    {#<section class="ourWork">#}
+    <section class="ourWork">
 
-        {#<div class="container">#}
-            {#<div class="row">#}
-                {#<div class="col-lg-12 col-md-12 infInWork">#}
-                    {#<h2>Во что мы верим?</h2>#}
-                    {#<p>В трезвый дух и бодрый взгляд</p>#}
-                {#</div>#}
-            {#</div>#}
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 infInWork">
+                    <h2>Во что мы верим?</h2>
+                    <p>В трезвый дух и бодрый взгляд</p>
+                </div>
+            </div>
 
-            {#<div class="row blInW">#}
+            <div class="row blInW">
 
-                {#<div class="col-lg-4 col-md-4 blockW">#}
-                    {#<div id="infW">#}
-                        {#<img src="" alt="">#}
-                    {#</div>#}
-                {#</div>#}
-
-
-                {#<div class="col-lg-4 col-md-4 blockW">#}
-                    {#<div id="infW">#}
-                        {#<img src="" alt="">#}
-                    {#</div>#}
-                {#</div>#}
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
 
 
-                {#<div class="col-lg-4 col-md-4 blockW">#}
-                    {#<div id="infW">#}
-                        {#<img src="" alt="">#}
-                    {#</div>#}
-                {#</div>#}
-
-                {#<div class="col-lg-4 col-md-4 blockW">#}
-                    {#<div id="infW">#}
-                        {#<img src="" alt="">#}
-                    {#</div>#}
-                {#</div>#}
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
 
 
-                {#<div class="col-lg-4 col-md-4 blockW">#}
-                    {#<div id="infW">#}
-                        {#<img src="" alt="">#}
-                    {#</div>#}
-                {#</div>#}
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
 
 
-                {#<div class="col-lg-4 col-md-4 blockW">#}
-                    {#<div id="infW">#}
-                        {#<img src="" alt="">#}
-                    {#</div>#}
-                {#</div>#}
-
-            {#</div>#}
-
-        {#</div>#}
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
 
 
-    {#</section>#}
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </section>
 
 
     <section class="FourSec">
