--- a/public/AboutUS/aboutUs.scss
+++ b/public/AboutUS/aboutUs.scss
@@ -218,7 +218,7 @@ body {
 
  .infInBeli {
     text-align: center;
-    padding-bottom: 150px;
+    padding-top: 100px;
     z-index: 100;
     p {
 
@@ -344,7 +344,7 @@ body {
 
 .hText {
     text-align: center;
-    padding: 50px 0;
+    padding-top: 100px !important;
 }
 
 .imgV img {
