--- a/public/AboutUS/aboutUs.css
+++ b/public/AboutUS/aboutUs.css
@@ -161,7 +161,7 @@ nav {
 
 .infInBeli {
   text-align: center;
-  padding-bottom: 150px;
+  padding-top: 100px;
   z-index: 100; }
   .infInBeli p {
     color: #979797; }
@@ -254,7 +254,7 @@ nav {
 
 .hText {
   text-align: center;
-  padding: 50px 0; }
+  padding-top: 100px !important; }
 
 .imgV img {
   width: 100%;
