--- a/public/style/style.css
+++ b/public/style/style.css
@@ -32,6 +32,16 @@ body {
         background-color: red;
         color: white;
         padding: 7px 5px; }
+#preloader {
+position: fixed;
+left: 0;
+top: 0;
+z-index: 9999999999999999999999999;
+width: 100%;
+height: 100%;
+overflow: visible;
+background: rgba(255, 255, 255, 0.55) url('/img/loaderG.gif') no-repeat center center;
+}
 
 #imgInHL {
   padding: 0 15px;
