--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="ru">
+    <div id="preloader" style="display: none"></div>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -49,5 +50,6 @@
         {{ encore_entry_script_tags('adaptiveMenu') }}
 
     {% endblock %}
+
     </body>
 </html>
