--- a/templates/pages/articlePage.html.twig
+++ b/templates/pages/articlePage.html.twig
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 articleOn">
-                    <img src="/uploads/{{ articles.img }}" alt="IMG">
+                    <img id="adaptiveIMG" src="/uploads/{{ articles.img }}" alt="IMG">
                 </div>
             </div>
         </div>
