--- a/templates/pages/newBusinesSite.html.twig
+++ b/templates/pages/newBusinesSite.html.twig
@@ -29,11 +29,11 @@
         <section class="contactUs">
 
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 iconsBl">
-                        <i id="oneI" class="fas fa-phone"></i>
-                        <i id="twoI" class="far fa-comment"></i>
-                    </div>
+                {#<div class="row">#}
+                    {#<div class="col-lg-12 col-md-12 iconsBl">#}
+                        {#<i id="oneI" class="fas fa-phone"></i>#}
+                        {#<i id="twoI" class="far fa-comment"></i>#}
+                    {#</div>#}
                 </div>
 
                 <div class="row desScr">
