--- a/public/choicePage/choicePage.css
+++ b/public/choicePage/choicePage.css
@@ -239,7 +239,7 @@ body {
 .seoInf {
     color: lightgray;
     text-align: left;
-    padding: 120px 0;
+    padding: 120px 0 0 0;
 }
 
 .seoInf p {
@@ -254,6 +254,32 @@ body {
     flex-direction: column;
     margin: 75px 0;
 }
+
+.desW {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 55px 0;
+    padding: 25px 0;
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.seoW .desW {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.desW button {
+    background-color: red;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    padding: 10px 35px;
+    cursor: pointer;
+}
+
 
 .desB button {
     background-color: red;
