--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -28,7 +28,7 @@
                     <div class="col-lg-12 col-md-12">
 
 
-                        <a href="{{ path('aboutUs') }}" class="Post">
+                        <a id="noBorder" href="{{ path('aboutUs') }}" class="Post">
                             <div class="BuCen">
                                 <p>Узнать о нас? </p>
                             </div>
@@ -125,9 +125,9 @@
 
 
             <div class="blInF">
-                <a href="#">
+                <a  href="#">
                 <div class="Serv">
-                    <a href="#"><h2>Наши услуги</h2></a>
+                    <a id="noBorder" href="#"><h2>Наши услуги</h2></a>
                 </div>
                 </a>
             </div>
@@ -211,13 +211,13 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 brifC">
 
-                            <a href="{{ path('services') }}">
+                            <a id="noBorder" href="{{ path('services') }}">
                                 <div class="firstButton">
                                     <p>Наши услуги</p>
                                 </div>
                             </a>
 
-                            <a href="#">
+                            <a id="noBorder" href="#">
                                 <div class="twoButton">Заказать звонок</div>
                             </a>
 
@@ -260,11 +260,11 @@
                 </div>
 
 
-                <div class="row">
-                    <div class="col-12 buttonInInfBlock">
-                        <a href="#"><button>Читать Дальше</button></a>
-                    </div>
-                </div>
+                {#<div class="row">#}
+                    {#<div class="col-12 buttonInInfBlock">#}
+                        {#<a href="#"><button>Читать Дальше</button></a>#}
+                    {#</div>#}
+                {#</div>#}
 
 
             </div>
