--- a/templates/pages/newDesignPage.html.twig
+++ b/templates/pages/newDesignPage.html.twig
@@ -30,10 +30,10 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 iconsBl">
-                        <i id="oneI" class="fas fa-phone"></i>
-                        <i id="twoI" class="far fa-comment"></i>
-                    </div>
+                    {#<div class="col-lg-12 col-md-12 iconsBl">#}
+                        {#<i id="oneI" class="fas fa-phone"></i>#}
+                        {#<i id="twoI" class="far fa-comment"></i>#}
+                    {#</div>#}
                 </div>
 
                 <div class="row desScr">
