--- a/public/admin/articleCreation.css
+++ b/public/admin/articleCreation.css
@@ -1,5 +1,20 @@
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  text-align: center;
+}
+
+body {
+  text-align: center;
+}
+
+a {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 
 .alImg {
   display: flex;
