--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -5,7 +5,7 @@
     <nav>
         <section class="imgS">
             <div class="imgR">
-                <img src="/img/octopus.jpg" alt="octopus" />
+                <img id="imgInMedia" src="/img/octopus.jpg" alt="octopus" />
             </div>
         </section>
 
