--- a/public/adaptiveMenu/adaptiveMenu.css
+++ b/public/adaptiveMenu/adaptiveMenu.css
@@ -1,4 +1,8 @@
 
+.adptiveMenu {
+    font-family: "Arial";
+
+}
 
 .containerMenu {
     width: 100%;
@@ -12,6 +16,20 @@
     background-color: #333;
     position: relative;
 
+
+}
+
+.header div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 50%;
+    color: lightgray;
+    overflow: hidden;
+}
+
+.header div img {
+    height: 70px;
 }
 
 span {
@@ -24,7 +42,7 @@ span {
     width: 100%;
     position: absolute;
     top: 100%;
-    left: 0%;
+    left: 0;
     z-index: 100;
     display: none;
 
