--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -1,5 +1,5 @@
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 320px) and (max-width: 375px) {
 
     body p {
         z-index: 199 !important;
@@ -70,17 +70,36 @@
         z-index: 999;
     }
 
+    .octH {
+        margin-top: 40px;
+    }
+
     .octH h1 {
-        font-size: 30px;
-        margin-top: 0 !important;
+        font-size: 20px !important;
+        margin-top: 10px;
+    }
+
+    .imgR {
+        overflow: hidden;
     }
 
     .imgR img {
-        display: none;
+        display: flex;
     }
-    .pointers {
-        margin-top: 55px;
 
+    #imgInMedia {
+        transform: rotate(90deg);
+        max-width: 100%;
+        height: auto;
+        margin-top: 215px !important;
+    }
+
+    .pointers {
+        margin-top: 0 !important;
+    }
+
+    .pointers img {
+        margin-top: 30px !important;
     }
 
     #imgLineMain {
@@ -137,13 +156,14 @@
     }
 
     .BuCen {
-        margin-top: 40px;
+        margin-top: 10px !important;
+        background-color: red;
+        border: none;
     }
 
     .BuCen p {
-        color: black;
+        color: white !important;
         font-weight: 700;
-        /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
 
     .buttonBlock .brifC {
@@ -494,7 +514,7 @@
 
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 375px) and (max-width: 414px) {
 
 
     body p {
@@ -555,21 +575,33 @@
         padding: 0;
     }
 
-    .octH h1 {
-        font-size: 30px;
-        margin-top: 0 !important;
+    .octH {
+        margin-top: 40px;
     }
 
-    .imgR img {
-        display: none;
+    .octH h1 {
+        font-size: 23px !important;
+        margin-top: 10px;
     }
 
     .imgR {
-        top: -20px;
+        overflow: hidden;
     }
 
-    .pointers {
-        margin-top: 55px;
+    .imgR img {
+        display: flex;
+    }
+
+    #imgInMedia {
+        transform: rotate(90deg);
+        max-width: 100%;
+        height: auto;
+        margin-top: 180px;
+    }
+
+
+    .pointers img {
+        margin-top: 180px;
 
     }
 
@@ -642,10 +674,15 @@
         margin-top: 40px;
     }
 
+    .BuCen {
+        margin-top: 40px;
+        background-color: red;
+        border: none;
+    }
+
     .BuCen p {
-        color: black;
+        color: white !important;
         font-weight: 700;
-        /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
 
     .buttonBlock .brifC {
@@ -932,7 +969,7 @@
 
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 414px) and (max-width: 768px) {
 
     body p {
         z-index: 199 !important;
@@ -992,25 +1029,34 @@
         padding: 0;
     }
 
-
-    .octH h1 {
-        font-size: 30px;
-        margin-top: 0 !important;
+    .octH {
+        margin-top: 40px;
     }
 
-    .imgR img {
-        /*max-width: 200px;*/
-        /*height: auto;*/
-        display: none;
+    .octH h1 {
+        font-size: 25px !important;
+        margin-top: 10px;
     }
 
     .imgR {
-        top: 95px;
+        overflow: hidden;
+        display: block !important;
     }
 
-    .pointers {
-        margin-top: 55px;
+    .imgR img {
+        display: flex;
+    }
 
+    #imgInMedia {
+        transform: rotate(90deg);
+        max-width: 100%;
+        height: auto;
+        margin-top: 180px;
+    }
+
+
+    .pointers img {
+        margin-top: 80px !important;
     }
 
     #imgLineMain {
@@ -1079,13 +1125,14 @@
     }
 
     .BuCen {
-        margin-top: 40px;
+        margin-top: 140px !important;
+        background-color: red;
+        border: none;
     }
 
     .BuCen p {
-        color: black;
+        color: white !important;
         font-weight: 700;
-        /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
 
     .buttonBlock .brifC {
@@ -1377,7 +1424,7 @@
 
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) and (max-width: 1024px) {
 
 
     body p {
@@ -1444,7 +1491,6 @@
     }
 
     nav p {
-
         height: auto;
     }
 
@@ -1457,9 +1503,21 @@
         height: 67px;
     }
 
-    .imgR img {
-        display: none;
+    .imgR {
+        overflow: hidden;
     }
+
+    .imgR img {
+        display: flex;
+    }
+
+    #imgInMedia {
+        transform: rotate(270deg);
+
+        height: auto;
+
+    }
+
 
     .pointers {
         margin-top: 55px;
@@ -1889,9 +1947,19 @@
         height: 67px;
     }
 
+    .imgR {
+        overflow: hidden;
+    }
+
     .imgR img {
-        width: 48%;
+        display: flex;
+    }
+
+    #imgInMedia {
+        transform: rotate(270deg);
+
         height: auto;
+
     }
 
     .pointers {
