--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
           crossorigin="anonymous">
 
-    {#<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>#}
 
 {% endblock %}
 
@@ -13,7 +12,10 @@
 
         <div class="containerMenu">
             <div class="header">
-                <img src="/img/OctoLogo.svg" alt="LogoOcto" width="65px" height="auto">
+                <div>
+                    <img src="/public/img/newLogoWhiteColor.svg" alt="LogoOcto" width="65px" height="auto">
+                    <p>Web-Studio<br><b>OctoWice</b></p>
+                </div>
                 <input class="nav-burger__checkbox" type="checkbox" id="burger">
                 <label class="nav-burger" for="burger">Меню</label>
 
