--- a/templates/pages/newDesignPage.html.twig
+++ b/templates/pages/newDesignPage.html.twig
@@ -29,12 +29,6 @@
         <section class="contactUs">
 
             <div class="container">
-                <div class="row">
-                    {#<div class="col-lg-12 col-md-12 iconsBl">#}
-                        {#<i id="oneI" class="fas fa-phone"></i>#}
-                        {#<i id="twoI" class="far fa-comment"></i>#}
-                    {#</div>#}
-                </div>
 
                 <div class="row desScr">
                     <h2>Что входит в разработку Сайта визитки?</h2>
@@ -142,38 +136,38 @@
                 </div>
 
                 <div class="row thereMainBlocks">
-                    <div id="radius"><p>Пакет Start:</p>
+                    <div id="radius"><p><b>Пакет Start:</b></p>
                         <ul>
-                            <li>Функции определено в описании макета</li>
-                            <li>Корзина</li>
-                            <li>Шаблонный дизайн</li>
-                            <li>Ограниченный функционал Админ панели</li>
-                            <li>Сроки от 7  дней</li>
+                            <li><i><b>Функции</b> определено <br>в описании макета</i></li>
+                            <li><b><i>Корзина</i></b></li>
+                            <li><b><i>Шаблонный</i></b> дизайн</li>
+                            <li><b><i>Ограниченный</i></b> функционал Админ панели</li>
+                            <li><b><i>Сроки</i></b> от 7  дней</li>
                         </ul>
-                        <h1>Цена: от 6.000 грн</h1>
+                        <h2>Цена:<br> от 6.000 грн</h2>
                     </div>
                     <div id="newCol">
-                        <p>Пакет High:</p>
+                        <p><b>Пакет High:</b></p>
                         <ul>
-                            <li>Функционал обсуждается лично</li>
-                            <li>От 15 страниц</li>
-                            <li>Корзина</li>
-                            <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель – корзина</li>
-                            <li>Сроки от 1 – 2  месяца</li>
+                            <li><b><i>Функционал</i></b> обсуждается лично</li>
+                            <li><b><i>От</i></b> 15 страниц</li>
+                            <li><b><i>Корзина</i></b></li>
+                            <li><b><i>Индивидуальный</i></b> дизайн</li>
+                            <li><b><i>Полноценная</i></b> админ панель – корзина</li>
+                            <li><b><i>Сроки</i></b> от 1 – 2  месяца</li>
                         </ul>
-                        <h1>Цена: от 20.000 грн</h1>
+                        <h2>Цена:<br> от 20.000 грн</h2>
                     </div>
-                    <div id="radiusTwo"><p>Пакет Medium:</p>
+                    <div id="radiusTwo"><p><b>Пакет Medium:</b></p>
                         <ul>
-                            <li>Функционал обсуждается лично</li>
-                            <li>До 15 страниц</li>
-                            <li>Корзина</li>
-                            <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель</li>
-                            <li>Сроки от 1-2 мес</li>
+                            <li><b><i>Функционал</i></b> обсуждается лично</li>
+                            <li><b><i>До</i></b> 15 страниц</li>
+                            <li><b><i>Корзина</i></b></li>
+                            <li><b><i>Индивидуальный</i></b> дизайн</li>
+                            <li><b><i>Полноценная</i></b> админ панель</li>
+                            <li><b><i>Сроки</i></b> от 1-2 мес</li>
                         </ul>
-                        <h1>Цена: от 15.000 грн</h1>
+                        <h2>Цена:<br> от 15.000 грн</h2>
                     </div>
                 </div>
 
