--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -483,22 +483,37 @@ nav {
     justify-content: center;
 
     #newCol {
-        background-color: #c6c6c6 !important;
+        background-color: #e7e7e7 !important;
         border-radius: 25px;
         height: 550px !important;
         position: relative;
         bottom: 25px;
-        p {
-            background-color: #999999 !important;
-            border-radius: 25px 25px 0 0;
-            padding: 5px;
+        ul {
+            list-style-type: none;
+            text-decoration: none;
+            padding: 50px 0;
+            margin: 0 25px;
             text-align: center;
-            border-bottom: 7px solid #222222;
+            li {
+                padding: 0;
+                margin: 0;
+
+            }
+        }
+
+        p {
+            background-color: #e7e7e7 !important;
+            border-radius: 25px 25px 0 0;
+            //padding: 5px;
+            text-align: center;
+            //border-bottom: 7px solid #222222;
             font-size: 25px;
         }
 
-        h1 {
+        h2 {
             text-align: center;
+            border-top: 2px solid red;
+            margin: 0 25px;
         }
     }
 
@@ -507,40 +522,71 @@ nav {
         border-radius: 25px 0 0 25px;
         -moz-border-radius: 25px 0 0 25px;
         -webkit-border-radius: 25px 0 0 25px;
+
+        ul {
+            list-style-type: none;
+            text-decoration: none;
+            padding: 50px 0;
+            margin: 0 25px;
+            text-align: center;
+            li {
+                padding: 0;
+                margin: 0;
+            }
+        }
+
         p {
-            background-color: #999999 !important;
+            background-color: #e7e7e7 !important;
             border-radius: 25px 25px 0 0;
             -moz-border-radius: 25px 0 0 0;
             -webkit-border-radius: 25px 0 0 0;
             padding: 5px 35px 5px 5px;
-            text-align: right;
-            border-bottom: 7px solid #222222;
+            text-align: center;
+            //border-bottom: 7px solid #222222;
             font-size: 25px;
         }
-      h1 {
-        text-align: center;
+      h2 {
+          text-align: center;
+          border-top: 2px solid red;
+          margin: 0 25px;
       }
     }
 
     #radiusTwo {
         border-radius: 0 50px 50px 0;
+
+        ul {
+            list-style-type: none;
+            text-decoration: none;
+            padding: 50px 0;
+            margin: 0 25px;
+            text-align: center;
+            li {
+                padding: 0;
+                margin: 0;
+
+            }
+        }
+
         p {
-            background-color: #999999 !important;
+            background-color: #e7e7e7 !important;
             border-radius: 0 25px 0 0;
             padding: 5px 5px 5px 35px;
-            text-align: left;
-            border-bottom: 7px solid #222222;
+            text-align: center;
+            //border-bottom: 7px solid #222222;
             font-size: 25px;
         }
-        h1 {
+        h2 {
             text-align: center;
+            border-top: 2px solid red;
+            margin: 0 25px;
         }
     }
 
     div {
         width: 300px;
         height: 500px;
-        background-color: #555555;
+        background-color: #e7e7e7;
         margin: 5px 25px;
 
     }
